--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ flask = "==2.2.2"
 requests = "==2.28.1"
 pandas = "==1.4.3"
 haversine = "==2.6.0"
+mlflow = "==1.28.0"
+boto3 = "==1.24.62"
+prefect = "==2.2.0"
 
 [dev-packages]
 jupyterlab = "*"
