--- a/Pipfile
+++ b/Pipfile
@@ -6,15 +6,16 @@ name = "pypi"
 [packages]
 scikit-learn = "==1.1.2"
 flask = "==2.2.2"
-requests = "==2.28.1"
 pandas = "==1.4.3"
 haversine = "==2.6.0"
 mlflow = "==1.28.0"
 boto3 = "==1.24.62"
 prefect = "==2.2.0"
+gunicorn = "==20.1.0"
 
 [dev-packages]
 jupyterlab = "*"
+requests = "==2.28.1"
 
 [requires]
 python_version = "3.9"
