--- a/src/prediction_service/Pipfile
+++ b/src/prediction_service/Pipfile
@@ -11,6 +11,8 @@ haversine = "==2.6.0"
 mlflow = "==1.28.0"
 boto3 = "==1.24.62"
 gunicorn = "==20.1.0"
+requests = "==2.28.1"
+pymongo = "==4.2.0"
 
 [dev-packages]
 jupyterlab = "*"
